--- a/index.html
+++ b/index.html
@@ -7,6 +7,77 @@
         <title>Sign-up Form</title>
     </head>
     <body>
-        <h1>Sign-up Form</h1>
+        <div class="left-panel"></div>
+        <div class="right-panel">
+            <div class="top-section">
+                <p>
+                    This is not a real online service! You know you need
+                    something like this in your life to help you realize your
+                    deepest dreams. Sign up <em>now</em> to get started.
+                </p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <div class="middle-section">
+                <form action="" method="get" id="sign-up-form">
+                    <h2>Let's do this!</h2>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="first-name">FIRST NAME</label>
+                            <input
+                                type="text"
+                                id="first-name"
+                                name="first-name"
+                            />
+                        </div>
+                        <div class="form-group">
+                            <label for="second-name">SECOND NAME</label>
+                            <input
+                                type="text"
+                                id="second-name"
+                                name="second-name"
+                            />
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email" name="email" />
+                        </div>
+                        <div class="form-group">
+                            <label for="phone-number">PHONE phone-number</label>
+                            <input
+                                type="tel"
+                                id="phone-number"
+                                name="phone-number"
+                            />
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="password">PASSWORD</label>
+                            <input
+                                type="password"
+                                id="password"
+                                name="password"
+                            />
+                        </div>
+                        <div class="form-group">
+                            <label for="confirm-password">PASSWORD</label>
+                            <input
+                                type="password"
+                                id="confirm-password"
+                                name="confirm-password"
+                            />
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="bottom-section">
+                <button type="submit" form="sign-up-form">
+                    Create Account
+                </button>
+                <p>Already have an account? <a href="">Log in</a></p>
+            </div>
+        </div>
     </body>
 </html>
