fix(html): correct typo in HTML file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <input type="email" id="email" name="email" />
                         </div>
                         <div class="form-group">
-                            <label for="phone-number">PHONE phone-number</label>
+                            <label for="phone-number">PHONE</label>
                             <input
                                 type="tel"
                                 id="phone-number"
