Feat(html): Add background to left panel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
         <title>Sign-up Form</title>
     </head>
     <body>
-        <div class="left-panel"></div>
+        <div class="left-panel">
+            <div class="bg-image">
+                <img
+                    src="./halie-west-25xggax4bSA-unsplash.jpg"
+                    alt="macro shot of green shrubs"
+                />
+            </div>
+            <div class="logo-bar"></div>
+        </div>
         <div class="right-panel">
             <div class="top-section">
                 <p>
