Feat(html): Add Odin PNG to HTML file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                     alt="macro shot of green shrubs"
                 />
             </div>
-            <div class="logo-bar"></div>
+            <div class="logo-bar">
+                <img src="./odin-lined.png" alt="PNG of Odin the norse god" />
+            </div>
         </div>
         <div class="right-panel">
             <div class="top-section">
