Feat(html): Style left-panel of HTML

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     </head>
     <body>
         <div class="left-panel">
-            <div class="bg-image">
-                <img
-                    src="./halie-west-25xggax4bSA-unsplash.jpg"
-                    alt="macro shot of green shrubs"
-                />
-            </div>
             <div class="logo-bar">
-                <img src="./odin-lined.png" alt="PNG of Odin the norse god" />
+                <img
+                    class="odin-img"
+                    src="./odin-lined.png"
+                    alt="PNG of Odin the norse god"
+                />
+                <p class="odin-text">ODIN</p>
+            </div>
+            <div class="photo-credit">
+                Photo by
+                <a href="https://unsplash.com/@haliewestphoto" target="_blank"
+                    >Halie West</a
+                >
+                on <a href="https://unsplash.com" target="_blank">Unsplash</a>
             </div>
         </div>
         <div class="right-panel">
