--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>
                     This is not a real online service! You know you need
                     something like this in your life to help you realize your
-                    deepest dreams. Sign up <em>now</em> to get started.
+                    deepest dreams.<br />Sign up <em>now</em> to get started.
                 </p>
                 <p>You <em>know</em> you want to.</p>
             </div>
@@ -43,6 +43,7 @@
                                 type="text"
                                 id="first-name"
                                 name="first-name"
+                                required
                             />
                         </div>
                         <div class="form-group">
@@ -51,13 +52,19 @@
                                 type="text"
                                 id="second-name"
                                 name="second-name"
+                                required
                             />
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group">
                             <label for="email">EMAIL</label>
-                            <input type="email" id="email" name="email" />
+                            <input
+                                type="email"
+                                id="email"
+                                name="email"
+                                required
+                            />
                         </div>
                         <div class="form-group">
                             <label for="phone-number">PHONE</label>
@@ -65,6 +72,7 @@
                                 type="tel"
                                 id="phone-number"
                                 name="phone-number"
+                                required
                             />
                         </div>
                     </div>
@@ -75,14 +83,18 @@
                                 type="password"
                                 id="password"
                                 name="password"
+                                required
                             />
                         </div>
                         <div class="form-group">
-                            <label for="confirm-password">PASSWORD</label>
+                            <label for="confirm-password"
+                                >CONFIRM PASSWORD</label
+                            >
                             <input
                                 type="password"
                                 id="confirm-password"
                                 name="confirm-password"
+                                required
                             />
                         </div>
                     </div>
